@@ -1,3 +1,9 @@
+Tue Dec 16 01:27:39 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * cuts/utils/Property_Expander.cpp:
+
+	  . Fixed compilation warning for Linux.
+
 Tue Dec 16 00:38:15 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * MPC/config/cuts_utils.mpb:
